Documentation edits made through Mintlify web editor

--- a/admin-settings/collecting-payment.mdx
+++ b/admin-settings/collecting-payment.mdx
@@ -3,19 +3,22 @@ title: 'Collecting User Payments'
 ---
 
 <Warning>
-    If you are collecting payment for tickets or memberships, you must connect a bank account or crypto wallet to receive your payout. 
-    
-    Additionally, you will **not** automatically receive payouts. Please contact Moongate support via [email](mailto:support@moongate.id or [Telegram](https://t.me/pweeh) to request a payout.
+  If you are collecting payment for tickets or memberships, you must connect a bank account or crypto wallet to receive your payout.
+
+  Additionally, you will **not** automatically receive payouts. Please contact Moongate support via \[email]\(mailto:support@moongate.id or [Telegram](https://t.me/pweeh) to request a payout.
 </Warning>
 
 <Steps>
-    <Step title="Navigate to the 'Payment' panel">
-        Click 'Setting' on the sidebar, and then 'Payment.'
-        <img src="/images/admin-settings/collecting-payment/payment panel.gif"/>
-    </Step>
-    <Step title="Add a bank account/crypto wallet">
-        Click 'Add Bank Account' or 'Add Crypto Wallet' according to your preference and fill out the requested information in the 
-        subsequent pop-up window.
-        <img width="520" height="94" src="/images/admin-settings/collecting-payment/add wallet button.png"/>
-    </Step>
+  <Step title="Navigate to the 'Payment' panel">
+    Click 'Setting' on the sidebar, and then 'Payment.'
+
+    <img src="/images/admin-settings/collecting-payment/payment panel.gif" />
+  </Step>
+
+  <Step title="Add a Bank account / Crypto wallet / Stripe">
+    Click 'Add Bank Account' or 'Add Crypto Wallet' according to your preference and fill out the requested information in the
+    subsequent pop-up window.
+
+    <img height="94" width="520" src="https://dashboard.mintlify.com/images/admin-settings/collecting-payment/add%20wallet%20button.png" />
+  </Step>
 </Steps>
