Documentation edits made through Mintlify web editor

--- a/admin-settings/collecting-payment.mdx
+++ b/admin-settings/collecting-payment.mdx
@@ -3,7 +3,7 @@ title: 'Collecting User Payments'
 ---
 
 <Warning>
-  If you are collecting payment for tickets or memberships, you must connect a bank account or crypto wallet to receive your payout.
+  If you are collecting payment for tickets or memberships, you must connect a bank account, crypto wallet or stripe to receive your payout.
 
   Additionally, you will **not** automatically receive payouts. Please contact Moongate support via \[email]\(mailto:support@moongate.id or [Telegram](https://t.me/pweeh) to request a payout.
 </Warning>
@@ -16,9 +16,9 @@ title: 'Collecting User Payments'
   </Step>
 
   <Step title="Add a Bank account / Crypto wallet / Stripe">
-    Click 'Add Bank Account' or 'Add Crypto Wallet' according to your preference and fill out the requested information in the
+    Click 'Add Bank Account', 'Add Crypto Wallet' or 'Connect with Stripe' according to your preference and fill out the requested information in the
     subsequent pop-up window.
 
-    <img height="94" width="520" src="https://dashboard.mintlify.com/images/admin-settings/collecting-payment/add%20wallet%20button.png" />
+    <img height="94" width="520" src="addwalletbutton.png" />
   </Step>
 </Steps>
