Documentation edits made through Mintlify web editor

--- a/admin-settings/collecting-payment.mdx
+++ b/admin-settings/collecting-payment.mdx
@@ -3,7 +3,7 @@ title: 'Collecting User Payments'
 ---
 
 <Warning>
-  If you are collecting payment for tickets or memberships, you must connect a bank account, crypto wallet or stripe to receive your payout.
+  If you are collecting payment for tickets or memberships, you must connect either a bank account, crypto wallet or stripe to receive your payout.
 
   Additionally, you will **not** automatically receive payouts. Please contact Moongate support via \[email]\(mailto:support@moongate.id or [Telegram](https://t.me/pweeh) to request a payout.
 </Warning>
