Documentation edits made through Mintlify web editor

--- a/admin-settings/collecting-payment.mdx
+++ b/admin-settings/collecting-payment.mdx
@@ -12,7 +12,7 @@ title: 'Collecting User Payments'
   <Step title="Navigate to the 'Payment' panel">
     Click 'Setting' on the sidebar, and then 'Payment.'
 
-    <img src="/images/admin-settings/collecting-payment/payment panel.gif" />
+    ![](</images/admin-settings/collecting-payment/payment panel.gif>)
   </Step>
 
   <Step title="Add a Bank account / Crypto wallet / Stripe">
@@ -20,5 +20,9 @@ title: 'Collecting User Payments'
     subsequent pop-up window.
 
     <img height="94" width="520" src="addwalletbutton.png" />
+  </Step>
+
+  <Step title="Set Default Payment Method">
+    Set this as Default Payment" box for your preferred bank account or crypto wallet. Only one account can be set as default in each category. After saving, a green "Default" tag will appear in the summary table next to your default payment method.
   </Step>
 </Steps>
