--- a/admin-settings/collecting-payment.mdx
+++ b/admin-settings/collecting-payment.mdx
@@ -23,6 +23,6 @@ title: 'Collecting User Payments'
   </Step>
 
   <Step title="Set Default Payment Method">
-    Set this as Default Payment" box for your preferred bank account or crypto wallet. Only one account can be set as default in each category. After saving, a green "Default" tag will appear in the summary table next to your default payment method.
+    After entering your payment information, check the "Set this as Default Payment" box for your preferred bank account or crypto wallet. Only one account can be default in each category. A green "Default" tag will appear next to it in the summary table after saving.
   </Step>
 </Steps>
