--- a/admin-settings/collecting-payment.mdx
+++ b/admin-settings/collecting-payment.mdx
@@ -25,6 +25,6 @@ title: 'Collecting User Payments'
   <Step title="Set Default Payment Method">
     After entering your payment information, check the "Set this as Default Payment" box for your preferred bank account or crypto wallet. Only one account can be default in each category. A green "Default" tag will appear next to it in the summary table after saving.![](Default-Payment.png)
 
-
+    ![](Default-Payment-2.png)
   </Step>
 </Steps>
