--- a/admin-settings/collecting-payment.mdx
+++ b/admin-settings/collecting-payment.mdx
@@ -22,9 +22,9 @@ title: 'Collecting User Payments'
     <img height="94" width="520" src="addwalletbutton.png" />
   </Step>
 
-  <Step title="Set Default Payment Method">
-    After entering your payment information, check the "Set this as Default Payment" box for your preferred bank account or crypto wallet. Only one account can be default in each category. A green "Default" tag will appear next to it in the summary table after saving.![](Default-Payment.png)
+  <Step title="Set Default Payment Method" stepNumber="2">
 
-    ![](Default-Payment-2.png)
+
+    After entering your payment information, check the "Set this as Default Payment" box for your preferred bank account or crypto wallet. Only one account can be default in each category. A green "Default" tag will appear next to it in the summary table after saving.![](Default-Payment.png)![](Default-Payment-2.png)
   </Step>
 </Steps>
