--- a/admin-settings/collecting-payment.mdx
+++ b/admin-settings/collecting-payment.mdx
@@ -11,7 +11,7 @@ title: 'Collecting User Payments'
 
 <Steps>
   <Step title="Navigate to the 'Payment' panel">
-    Click 'Setting' on the sidebar, and then 'Payment.'
+    Click 'Setting' on the sidebar, and then 'Payment'
 
     ![](</images/admin-settings/collecting-payment/payment panel.gif>)
   </Step>
