Documentation edits made through Mintlify web editor

--- a/admin-settings/collecting-payment.mdx
+++ b/admin-settings/collecting-payment.mdx
@@ -3,7 +3,6 @@ title: 'Collecting User Payments'
 ---
 
 <Warning>
-
   If you are collecting payment for tickets or memberships, you must connect either a bank account, crypto wallet or stripe to receive your payout.
 
   Additionally, you will **not** automatically receive payouts. Please contact Moongate support via \[email]\(mailto:support@moongate.id or [Telegram](https://t.me/pweeh) to request a payout.
@@ -11,7 +10,7 @@ title: 'Collecting User Payments'
 
 <Steps>
   <Step title="Navigate to the 'Payment' panel">
-    Click 'Setting' on the sidebar, and then 'Payment'
+    Click 'Setting' on the sidebar, and then 'Payment.'
 
     ![](</images/admin-settings/collecting-payment/payment panel.gif>)
   </Step>
@@ -25,6 +24,5 @@ title: 'Collecting User Payments'
 
   <Step title="Set Default Payment Method" stepNumber="2">
     After entering your payment information, check the "Set this as Default Payment" box for your preferred bank account or crypto wallet. Only one account can be default in each category. A green "Default" tag will appear next to it in the summary table after saving.![](Default-Payment.png)![](Default-Payment-2.png)
-
   </Step>
 </Steps>
