--- a/admin-settings/collecting-payment.mdx
+++ b/admin-settings/collecting-payment.mdx
@@ -3,7 +3,6 @@ title: 'Collecting User Payments'
 ---
 
 <Warning>
-
   If you are collecting payment for tickets or memberships, you must connect either a bank account, crypto wallet or stripe to receive your payout.
 
   Additionally, you will **not** automatically receive payouts. Please contact Moongate support via \[email]\(mailto:support@moongate.id or [Telegram](https://t.me/pweeh) to request a payout.
@@ -24,7 +23,8 @@ title: 'Collecting User Payments'
   </Step>
 
   <Step title="Set Default Payment Method" stepNumber="2">
-    After entering your payment information, check the "Set this as Default Payment" box for your preferred bank account or crypto wallet. Only one account can be default in each category. A green "Default" tag will appear next to it in the summary table after saving.![](Default-Payment.png)![](Default-Payment-2.png)
+    After entering your payment information, check the "Set this as Default Payment" box for your preferred bank account or crypto wallet. ![](Default-Payment.png)Only one account can be default in each category. A green "Default" tag will appear next to it in the summary table after saving.
 
+    ![](Default-Payment-2.png)
   </Step>
 </Steps>
