--- a/admin-settings/collecting-payment.mdx
+++ b/admin-settings/collecting-payment.mdx
@@ -5,24 +5,27 @@ title: 'Collecting User Payments'
 <Warning>
   If you are collecting payment for tickets or memberships, you must connect either a bank account, crypto wallet or stripe to receive your payout.
 
-  Additionally, you will **not** automatically receive payouts. Please contact Moongate support via \[email]\(mailto:support@moongate.id or [Telegram](https://t.me/pweeh) to request a payout.
+  Additionally, you will **not** automatically receive payouts. Please contact Moongate support via [email](mailto:support@moongate.id) or [Telegram](https://t.me/pweeh) to request a payout.
 </Warning>
 
 <Steps>
   <Step title="Navigate to the 'Payment' panel">
     Click 'Setting' on the sidebar, and then 'Payment'
 
-    ![](</images/admin-settings/collecting-payment/payment panel.gif>)
+    <img src="/images/admin-settings/collecting-payment/payment panel.gif"/>
   </Step>
 
   <Step title="Add a Bank account / Crypto wallet / Stripe">
     Click 'Add Bank Account', 'Add Crypto Wallet' or 'Connect with Stripe' according to your preference and fill out the requested information in the
     subsequent pop-up window.
 
-    <img height="94" width="520" src="addwalletbutton.png" />
+    <img height="94" width="520" src="/images/admin-settings/collecting-payment/addwalletbutton.png" />
   </Step>
 
   <Step title="Set Default Payment Method" stepNumber="2">
-    After entering your payment information, check the "Set this as Default Payment" box for your preferred bank account or crypto wallet. Only one account can be default in each category. A green "Default" tag will appear next to it in the summary table after saving.![](Default-Payment.png)![](Default-Payment-2.png)
+    After entering your payment information, check the "Set this as Default Payment" box for your preferred bank account or crypto wallet. Only one account can be default in each category. A green "Default" tag will appear next to it in the summary table after saving.
+    
+      <img src="/images/admin-settings/collecting-payment/Default-Payment.png"/>
+        <img src="/images/admin-settings/collecting-payment/Default-Payment-2.png"/>
   </Step>
 </Steps>
