feat(user-guide): remove section

--- a/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
+++ b/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
@@ -12,8 +12,8 @@ description: 'View your NFTs in, gain custody of, and manage your automatically 
 </Warning>
 <Accordion title="View NFTs in Your Non-Custodial Wallet">
     <Steps>
-        <Step title="Log in to Moongate">
-        </Step>
+        <Step title="Log in to Moongate" />
+       
         <Step title="Open your wallet">
             Open the user settings panel then click ‘Manage’ to be taken to your non-custodial wallet.
             <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/manage assets button.gif"/>
@@ -46,7 +46,7 @@ description: 'View your NFTs in, gain custody of, and manage your automatically 
     </Steps>
 </Accordion>
 
-<Accordion title="Signing into DApps With Your Wallet">
+{/* <Accordion title="Signing into DApps With Your Wallet">
     <Warning>Your non-custodial wallet must have been claimed before you can use it to sign into DApps.</Warning>
     <Steps>        
         <Step title="Confirm the DApp supports Particle Wallet sign in">     
@@ -62,7 +62,7 @@ description: 'View your NFTs in, gain custody of, and manage your automatically 
         </Step>
     </Steps>
 
-</Accordion>
+</Accordion> */}
 <Accordion title="Signing into OpenSea and other dApps using WalletConnect">
     <Steps>        
         <Step title="Select the WalletConnect option on OpenSea">
